@@ -388,6 +388,9 @@ the default 64_32 platform (4 bytes per machine word):
 aims to be a minimal configuration file format. See also
 https://toml.io/en/v1.0.0
 
+* The command-line tool "isabelle build" now supports option -A to
+include AFP as directory, without selecting any sessions yet.
+
 * The command-line tool "isabelle profiling" produces per-session
 statistics from ML heap images. Command-line options are similar to
 "isabelle build". Output is in CSV format, which can be opened by common
